# freeswitch-1

./: .gitignore  Makefile.am  buildspec.yml  modules.conf
DockerBuilder/: Dockerfile  sources.list
debian/: bootstrap.sh  changelog  control-modules  rules  util.sh
libs/esl/: fs_cli.c
libs/esl/src/: esl.c  esl_config.c  esl_json.c
libs/esl/src/include/: esl.h
libs/miniupnpc/: minissdpc.c
libs/sofia-sip/libsofia-sip-ua/sdp/: sdp.c
libs/sofia-sip/libsofia-sip-ua/sresolv/: sres.c
libs/sofia-sip/libsofia-sip-ua/tport/: tport_logging.c  tport_tls.c  ws.c
libs/srtp/crypto/cipher/: aes_gcm_ossl.c  aes_icm_ossl.c
libs/srtp/crypto/hash/: hmac.c  hmac_ossl.c
libs/srtp/crypto/include/: aes_gcm_ossl.h  aes_icm_ossl.h  hmac.h
src/: switch_channel.c  switch_core_cert.c  switch_core_db.c  switch_core_media.c  switch_core_sqldb.c  switch_ivr_async.c  switch_ivr_bridge.c  switch_ivr_originate.c  switch_ivr_play_say.c  switch_json.c  switch_nat.c  switch_pgsql.c  switch_rtp.c  switch_utils.c
src/include/: switch_utils.h
src/mod/applications/mod_aron_extra/: Makefile.am  mod_aron_extra.c
src/mod/applications/mod_commands/: mod_commands.c
src/mod/applications/mod_curl/: mod_curl.c
src/mod/applications/mod_directory/: mod_directory.c
src/mod/applications/mod_dptools/: mod_dptools.c
src/mod/applications/mod_fifo/: Makefile.am  mod_fifo.c
src/mod/applications/mod_spandsp/: udptl.c
src/mod/applications/mod_voicemail/: mod_voicemail.c
src/mod/endpoints/mod_sofia/: mod_sofia.c  mod_sofia.h  sofia_glue.c  sofia_presence.c  sofia_reg.c
(+2 files in other folders)
